--- a/scss/rubydesign-alpha-default-narrow.scss
+++ b/scss/rubydesign-alpha-default-narrow.scss
@@ -163,14 +163,6 @@ div.tweets-pulled-listing a{
   margin: 10px 0 0 20px;
 }
 
-.contact-form {
-    input[type="text"], .form-text, .form-textarea, .grippie {
-    width: 260px;
-  }
-  .form-textarea {
-    height: 120px;
-  }
-}
 
 /* portfolio page*/
 .page-node-7 {
